# apps_installer

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  compile_flags.txt
include/: arguments.hpp  commands.hpp  filetools.hpp  misctools.hpp  processtools.hpp  stringtools.hpp
src/: arguments.cxx  benchmark.cpp  commands.cxx  filetools.cxx  main.cpp  misctools.cxx  process.cxx  processtools.cxx  stringtools.cxx
static/: CMakeLists.txt
